Fix z-index issue with datepicker and finish mock ui

--- a/src/app/filters-menu/filters-menu.component.css
+++ b/src/app/filters-menu/filters-menu.component.css
@@ -15,9 +15,8 @@
 }
 
 .filter-menu--position {
-  position: fixed;
+  position: absolute;
   left: 0px;
   top: 0px;
-  z-index: 1203;
-  clear: both;
+  z-index: 999; /* Angular Materials Z-Index is 1000*/
 }
